# organon

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
organon/api/: app.py  deps.py  schemas.py  session.py
organon/api/routes/: auth.py  commons_images.py  domains.py  generate.py  modules.py  search.py  sources.py  taxobox_refresh.py
organon/cli/: main.py
organon/core/: auth_settings.py  config.py  db_inventory.py  domains.py  mediawiki_bot.py  models.py  registry.py  wiki_permissions.py
organon/core/data/: auteurs_botanistes.yaml  auteurs_procaryotes.yaml  auteurs_zoologistes.yaml  countries.yaml  db_inventory.yaml  homonymes.yaml  ranks.yaml
organon/core/rendering/: authors.py  engine.py  grammar.py  sections.py  support.py
organon/core/selectors/: categorization.py  coherence.py  engine.py
organon/modules/: bootstrap.py  common.py
organon/modules/adw/: adapter.py  module.py
organon/modules/algaebase/: adapter.py  module.py  ranks.py
organon/modules/cites/: adapter.py  module.py
organon/modules/col/: adapter.py  module.py  ranks.py
organon/modules/commons_images/: adapter.py  service.py
organon/modules/eflora/: adapter.py  module.py
organon/modules/eol/: adapter.py  module.py
organon/modules/externe/: adapter.py  module.py
organon/modules/gbif/: adapter.py  module.py  ranks.py
organon/modules/inpn/: adapter.py  (+2 more)
web-app/: App.jsx  AuthorsPage.jsx  ImageGallery.jsx  SourcesPage.jsx  StoragePreferencesBanner.jsx  apiClient.js  index.css  index.html  package-lock.json  package.json  storagePreferences.js  vite.config.js
(+56 files in other folders)
